viewmodel sidebar partially working

--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html>
     <head>
+        <script src="sidebar.js"></script>
     </head>
     <body>
-        <h1>ViewModels</h1>
-        <p>Selected Element: <span></span></p>
-        <script src="sidebar.js"></script>
+        <p>Select an Element to see its ViewModel</p>
     </body>
 </html>
