Updating ViewModel properties working
Also added can.js and updated CSP policy to allow its eval behavior.

--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
     <head>
+        <script src="../lib/can-4_2_0.js"></script>
         <script src="sidebar.js"></script>
     </head>
     <body>
-        <p>Select an Element to see its ViewModel</p>
+        <viewmodel-sidebar></viewmodel-sidebar>
     </body>
 </html>
