rough version of graph in the CanJS panel

--- a/panels/main.html
+++ b/panels/main.html
@@ -6,6 +6,7 @@
     <body>
         <devtools-panel></devtools-panel>
         <script src="../lib/can-4_2_0.js"></script>
+        <script src="../lib/vis.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
