styling and functionality of queues sidebar

--- a/queues-panel/index.html
+++ b/queues-panel/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="../node_modules/can-devtools-components/dist/can-devtools-components.css">
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+            }
+        </style>
     </head>
     <body>
         <canjs-devtools-queues-panel></canjs-devtools-queues-panel>
