giving modules / components more descriptive names

--- a/queues-stack/index.html
+++ b/queues-stack/index.html
@@ -2,10 +2,16 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="../node_modules/can-devtools-components/dist/can-devtools-components.css">
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+            }
+        </style>
     </head>
     <body>
-        <canjs-devtools-viewmodel-panel></canjs-devtools-viewmodel-panel>
+        <canjs-devtools-queues-stack></canjs-devtools-queues-stack>
         <script src="../node_modules/can-devtools-components/dist/can-devtools-components.js"></script>
-        <script src="viewmodel-panel.js"></script>
+        <script src="queues-stack.js"></script>
     </body>
 </html>
