--- a/viewmodel-editor/index.html
+++ b/viewmodel-editor/index.html
@@ -2,16 +2,10 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="../node_modules/can-devtools-components/dist/can-devtools-components.css">
-        <style>
-            body {
-                margin: 0;
-                padding: 0;
-            }
-        </style>
     </head>
     <body>
-        <canjs-devtools-queues-panel></canjs-devtools-queues-panel>
+        <canjs-devtools-viewmodel-editor></canjs-devtools-viewmodel-editor>
         <script src="../node_modules/can-devtools-components/dist/can-devtools-components.js"></script>
-        <script src="queues-panel.js"></script>
+        <script src="viewmodel-editor.js"></script>
     </body>
 </html>
