centalizing registredFrameURLs code to remove duplication

--- a/queues-stack/index.html
+++ b/queues-stack/index.html
@@ -12,6 +12,7 @@
     <body>
         <canjs-devtools-queues-stack></canjs-devtools-queues-stack>
         <script src="../node_modules/can-devtools-components/dist/can-devtools-components.js"></script>
+        <script src="../canjs-devtools-helpers.js"></script>
         <script src="queues-stack.js"></script>
     </body>
 </html>
