--- a/viewmodel-editor/index.html
+++ b/viewmodel-editor/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <canjs-devtools-viewmodel-editor></canjs-devtools-viewmodel-editor>
+        <script src="../canjs-devtools-helpers.js"></script>
         <script src="../node_modules/can-devtools-components/dist/can-devtools-components.js"></script>
         <script src="viewmodel-editor.js"></script>
     </body>
