--- a/bindings-graph/index.html
+++ b/bindings-graph/index.html
@@ -12,6 +12,7 @@
     <body>
         <canjs-devtools-bindings-graph></canjs-devtools-bindings-graph>
         <script src="../node_modules/can-devtools-components/dist/can-devtools-components.js"></script>
+        <script src="../canjs-devtools-helpers.js"></script>
         <script src="bindings-graph.js"></script>
     </body>
 </html>
