updating link to installation instructions

--- a/popups/no-can.html
+++ b/popups/no-can.html
@@ -9,6 +9,6 @@
     </head>
     <body>
         <h1>CanJS was not found on this page</h1>
-        <p>If it is using CanJS, see the <a target="_blank" href="https://canjs.com/doc/guides/debugging.html">installation instructions</a>.</p>
+        <p>If it is using CanJS, see the <a target="_blank" href="https://canjs.com/doc/guides/debugging.html#InstallingCanJSDevtools">installation instructions</a>.</p>
     </body>
 </html>
