updating to new ViewModel Editor

--- a/bindings-graph/index.html
+++ b/bindings-graph/index.html
@@ -11,8 +11,7 @@
     </head>
     <body>
         <canjs-devtools-bindings-graph></canjs-devtools-bindings-graph>
-        <script src="../node_modules/can-devtools-components/dist/can-devtools-components.js"></script>
         <script src="../canjs-devtools-helpers.js"></script>
-        <script src="bindings-graph.js"></script>
+        <script type="module" src="bindings-graph.mjs"></script>
     </body>
 </html>
