--- a/queues-stack/index.html
+++ b/queues-stack/index.html
@@ -12,8 +12,7 @@
     </head>
     <body>
         <canjs-devtools-queues-stack></canjs-devtools-queues-stack>
-        <script src="../node_modules/can-devtools-components/dist/can-devtools-components.js"></script>
         <script src="../canjs-devtools-helpers.js"></script>
-        <script src="queues-stack.js"></script>
+        <script type="module" src="queues-stack.mjs"></script>
     </body>
 </html>
