--- a/viewmodel-editor/index.html
+++ b/viewmodel-editor/index.html
@@ -6,7 +6,6 @@
     <body>
         <canjs-devtools-viewmodel-editor></canjs-devtools-viewmodel-editor>
         <script src="../canjs-devtools-helpers.js"></script>
-        <script src="../node_modules/can-devtools-components/dist/can-devtools-components.js"></script>
-        <script src="viewmodel-editor.js"></script>
+        <script type="module" src="viewmodel-editor.mjs"></script>
     </body>
 </html>
