using new panel component that uses expandable-section to have independent scrolling

--- a/panel/index.html
+++ b/panel/index.html
@@ -6,6 +6,10 @@
             html, body {
                 height: 100%;
             }
+            canjs-devtools-panel {
+                display: block;
+                height: 100%;
+            }
         </style>
     </head>
     <body>
