changing canjs-devtools-helpers to mjs

--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
 <!doctype html>
-<script src="canjs-devtools-helpers.js"></script>
-<script src="index.js"></script>
+<script type="module" src="index.mjs"></script>
