Upgrade to Can 6
- Fix injected script tests
- Update CanJS to latest version
- Fix chrome object mock in helpers test
- Use can-devtools-components pre-release

--- a/bindings-graph/index.html
+++ b/bindings-graph/index.html
@@ -1,16 +1,26 @@
-<!doctype html>
-<html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="../node_modules/can-devtools-components/dist/can-devtools-components.css">
-        <style>
-            bindings-graph div {
-                height: 90%;
-                width: 98%;
-            }
-        </style>
-    </head>
-    <body>
-        <canjs-devtools-bindings-graph></canjs-devtools-bindings-graph>
-        <script type="module" src="bindings-graph.mjs"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>canjs-devtools-bindings-graph</title>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="../node_modules/can-devtools-components/dist/can-devtools-components.css"
+		/>
+		<style>
+			bindings-graph div {
+				height: 90%;
+				width: 98%;
+			}
+		</style>
+	</head>
+	<body>
+		<body>
+			<canjs-devtools-bindings-graph></canjs-devtools-bindings-graph>
+			<script type="module" src="bindings-graph.mjs"></script>
+		</body>
+	</body>
 </html>
