--- a/panel/index.html
+++ b/panel/index.html
@@ -1,19 +1,30 @@
-<!doctype html>
-<html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="../node_modules/can-devtools-components/dist/can-devtools-components.css">
-        <style>
-            html, body {
-                height: 100%;
-            }
-            canjs-devtools-panel {
-                display: block;
-                height: 100%;
-            }
-        </style>
-    </head>
-    <body>
-        <canjs-devtools-panel></canjs-devtools-panel>
-        <script type="module" src="panel.mjs"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>canjs-devtools-panel</title>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="../node_modules/can-devtools-components/dist/can-devtools-components.css"
+		/>
+		<style>
+			html,
+			body {
+				height: 100%;
+			}
+			canjs-devtools-panel {
+				display: block;
+				height: 100%;
+			}
+		</style>
+	</head>
+	<body>
+		<body>
+			<canjs-devtools-panel></canjs-devtools-panel>
+			<script type="module" src="panel.mjs"></script>
+		</body>
+	</body>
 </html>
