--- a/popups/no-can.html
+++ b/popups/no-can.html
@@ -1,14 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            html {
-                min-width: 400px;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>CanJS was not found on this page</h1>
-        <p>If it is using CanJS, see the <a target="_blank" href="https://canjs.com/doc/guides/debugging.html#InstallingCanJSDevtools">installation instructions</a>.</p>
-    </body>
+	<head>
+		<style>
+			html {
+				min-width: 400px;
+			}
+		</style>
+	</head>
+	<body>
+		<h1>CanJS was not found on this page</h1>
+		<p>
+			If it is using CanJS, see the
+			<a
+				target="_blank"
+				href="https://canjs.com/doc/guides/debugging.html#InstallingCanJSDevtools"
+				>installation instructions</a
+			>.
+		</p>
+	</body>
 </html>
