--- a/queues-stack/index.html
+++ b/queues-stack/index.html
@@ -1,17 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="../node_modules/can-devtools-components/dist/can-devtools-components.css">
-        <style>
-            body {
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-            }
-        </style>
-    </head>
-    <body>
-        <canjs-devtools-queues-stack></canjs-devtools-queues-stack>
-        <script type="module" src="queues-stack.mjs"></script>
-    </body>
+	<head>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="../node_modules/can-devtools-components/dist/can-devtools-components.css"
+		/>
+		<style>
+			body {
+				margin: 0;
+				padding: 0;
+				overflow: hidden;
+			}
+		</style>
+	</head>
+	<body>
+		<canjs-devtools-queues-stack></canjs-devtools-queues-stack>
+		<script type="module" src="queues-stack.mjs"></script>
+	</body>
 </html>
