--- a/panel/test.html
+++ b/panel/test.html
@@ -1,4 +1,16 @@
-<!doctype html>
-<script src="../node_modules/steal/steal.js"
-    mocha="bdd"
-    main="panel/panel-test"></script>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>canjs-devtools-panel</title>
+	</head>
+	<body>
+		<script
+			src="../node_modules/steal/steal.js"
+			mocha="bdd"
+			main="panel/panel-test"
+		></script>
+	</body>
+</html>
