--- a/viewmodel-editor/index.html
+++ b/viewmodel-editor/index.html
@@ -1,10 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="../node_modules/can-devtools-components/dist/can-devtools-components.css">
-    </head>
-    <body>
-        <canjs-devtools-viewmodel-editor></canjs-devtools-viewmodel-editor>
-        <script type="module" src="viewmodel-editor.mjs"></script>
-    </body>
+	<head>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="../node_modules/can-devtools-components/dist/can-devtools-components.css"
+		/>
+	</head>
+	<body>
+		<canjs-devtools-viewmodel-editor
+			tagName:raw="the-who"
+		></canjs-devtools-viewmodel-editor>
+		<script type="module" src="viewmodel-editor.mjs"></script>
+	</body>
 </html>
