--- a/popups/can.html
+++ b/popups/can.html
@@ -12,7 +12,7 @@
 		<p>CanJS devtools are integrated with the normal Chrome Developer tools</p>
 		<p>Open Developer Tools to find</p>
 		<ul>
-			<li>The ViewModel Editor in the sidebar of the Elements panel</li>
+			<li>The Observable Properties Editor in the sidebar of the Elements panel</li>
 			<li>The Bindings Graph in the sidebar of the Elements panel</li>
 			<li>The Queues Stack in the sidebar of the Sources panel</li>
 		</ul>
